--- a/ComputerGraphics/CG_WarmingUp/CG_WarmingUp/CG_WarmingUp.vcxproj.filters
+++ b/ComputerGraphics/CG_WarmingUp/CG_WarmingUp/CG_WarmingUp.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="WarmingUp_01.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="WarmingUp_02.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
