--- a/ComputerGraphics/CG_WarmingUp/CG_WarmingUp/CG_WarmingUp.vcxproj.filters
+++ b/ComputerGraphics/CG_WarmingUp/CG_WarmingUp/CG_WarmingUp.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="WarmingUp_02.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="WarmingUp_03.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="WarmingUp_04.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
