--- a/ComputerGraphics/0928_셰이더프로그램/0928_셰이더프로그램/0928_셰이더프로그램.vcxproj.filters
+++ b/ComputerGraphics/0928_셰이더프로그램/0928_셰이더프로그램/0928_셰이더프로그램.vcxproj.filters
@@ -15,16 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="06.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="vertex.glsl">
       <Filter>소스 파일</Filter>
     </None>
     <None Include="fragment.glsl">
       <Filter>소스 파일</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
