--- a/ComputerGraphics/0928_셰이더프로그램/0928_셰이더프로그램/0928_셰이더프로그램.vcxproj
+++ b/ComputerGraphics/0928_셰이더프로그램/0928_셰이더프로그램/0928_셰이더프로그램.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7674ee8f-e5c7-4ee3-9ce3-fd06887a10df}</ProjectGuid>
-    <RootNamespace>My4주차실습6</RootNamespace>
+    <ProjectGuid>{383a758a-5721-427e-be20-4c4d03b888dd}</ProjectGuid>
+    <RootNamespace>My0928셰이더프로그램</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -131,11 +131,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="06.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="fragment.glsl" />
     <None Include="vertex.glsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
