삼각형 그리는중

--- a/ComputerGraphics/0929_삼각형그리기/0929_삼각형그리기/0929_삼각형그리기.vcxproj.filters
+++ b/ComputerGraphics/0929_삼각형그리기/0929_삼각형그리기/0929_삼각형그리기.vcxproj.filters
@@ -23,10 +23,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="point.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="triangle.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
